objects/EUR_CRM_Sales_Order__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Order_Status__c</fullName>
        <label>Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                    <default>true</default>
                    <label>In Process</label>
                </value>
                <value>
                    <fullName>Finished</fullName>
                </value>
                <value>
                    <fullName>Partially processed</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Integration Error</fullName>
                </value>
                <value>
                    <fullName>Send To ERP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_OutboundMessageToken__c</fullName>
        <defaultValue>&quot;b5212c9381534188b9261871e0aa967f&quot;</defaultValue>
        <description>This field is used for the outbound message authentification. The value in the field will be send in the body request on the outbound message. The ERP system which receives this request can used this value to find the matching key for authentification. The default value is used as a key.</description>
        <label>OutboundMessageToken</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_OverallBlockStatus__c</fullName>
        <label>OverallBlockStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_POtypeSD__c</fullName>
        <label>PO type (SD)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Laptops</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Parent_Settlement_Clerk__c</fullName>
        <label>Parent -&gt; Settlement Clerk</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DBZ</fullName>
                </value>
                <value>
                    <fullName>EDEKA</fullName>
                </value>
                <value>
                    <fullName>GES</fullName>
                </value>
                <value>
                    <fullName>GEVA</fullName>
                </value>
                <value>
                    <fullName>MARKANT</fullName>
                </value>
                <value>
                    <fullName>METRO</fullName>
                </value>
                <value>
                    <fullName>REWE</fullName>
                </value>
                <value>
                    <fullName>Selbstabrechner</fullName>
                </value>
                <value>
                    <fullName>Lager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_PaymentDate__c</fullName>
        <label>PaymentDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PaymentTermsTextMapping__c</fullName>
        <label>Payment Terms Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Payment_Term__c</fullName>
        <label>Payment Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>At delivery</fullName>
                </value>
                <value>
                    <fullName>End of month + 30</fullName>
                </value>
                <value>
                    <fullName>End of month + 60</fullName>
                </value>
                <value>
                    <fullName>Invoice date + 30</fullName>
                </value>
                <value>
                    <fullName>Invoice date + 45</fullName>
                </value>
                <value>
                    <fullName>Invoice date + 60</fullName>
                </value>
                <value>
                    <fullName>Invoice date + 90</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Paymentterms__c</fullName>
        <label>Payment terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FixedDate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Post_code__c</fullName>
        <formula>EUR_CRM_Account__r.EUR_CRM_Postal_Code__c</formula>
        <label>Postal code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Preferred_Delivery_Day__c</fullName>
        <label>Preferred Delivery Day</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Prepayment__c</fullName>
        <label>Prepayment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_PriceBookID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>EUR_CRM_ProductCatalog__c</referenceTo>
        <relationshipLabel>Sales Orders (EU)</relationshipLabel>
        <relationshipName>Sales_Orders_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Price_List__c</fullName>
        <label>Price List</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>T1</fullName>
                </value>
                <value>
                    <fullName>T2</fullName>
                </value>
                <value>
                    <fullName>T3</fullName>
                </value>
                <value>
                    <fullName>T0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_PricingDate__c</fullName>
        <label>PricingDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PricingPartnerNumber__c</fullName>
        <label>PricingPartnerNumber</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PurchaseOrderCode__c</fullName>
        <description>to determine the system where order was initially taken</description>
        <label>Purchase Order Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PurchaseType__c</fullName>
        <formula>IF( ISBLANK(EUR_CRM_PurchaseOrderCode__c) , &apos;BT&apos;, EUR_CRM_PurchaseOrderCode__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Purchaseorderdate__c</fullName>
        <formula>EUR_CRM_MobileCreatedDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase order date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Recipient__c</fullName>
        <label>Recipient</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_ReferenceId__c</fullName>
        <label>Reference Id</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_RejectionStatus__c</fullName>
        <label>RejectionStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Remark__c</fullName>
        <label>Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Requesteddeliverydate__c</fullName>
        <label>Requested delivery date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_ReturnReason__c</fullName>
        <label>Return Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Damaged goods</fullName>
                </value>
                <value>
                    <fullName>Expired goods</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_SAPCreationDate__c</fullName>
        <label>SAPCreationDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_SAPDocumentNumber__c</fullName>
        <label>SAP Document Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_SAPDocumentType__c</fullName>
        <label>SAP Document Type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_SFOrderNumberInSAP__c</fullName>
        <label>SFOrderNumberInSAP</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_SF_Order_Number__c</fullName>
        <label>SF Order Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_SalesDistrict__c</fullName>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SalesDistrict</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_SalesDivision__c</fullName>
        <label>Sales Division</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_SalesOrg__c</fullName>
        <label>Sales Org</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_SalesOrganization__c</fullName>
        <formula>EUR_CRM_Account__r.EUR_CRM_Sales_Organization__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_SalesRepSAPNumber__c</fullName>
        <label>Sales Rep SAP Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_SalesRep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesRep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Orders_EU2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sales_Rep_Name__c</fullName>
        <formula>CreatedBy.FirstName+&apos; &apos;+ CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sales_Rep_Phone__c</fullName>
        <formula>CreatedBy.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_SapOrderCategory__c</fullName>
        <label>Sap Order Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>J</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>Q</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>W</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_SapOrderDocType__c</fullName>
        <label>Sap Order Document Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_ShipToCustomerNumber__c</fullName>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_ShipToID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to &quot;ShipTo&quot; Account for SAP Orders</description>
        <label>Ship to Account</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipLabel>Sales Orders (EU) (Ship to Account)</relationshipLabel>
        <relationshipName>Sales_Orders_EU3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_ShipTo__c</fullName>
        <label>Ship To</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_SoldToCustomerNumber__c</fullName>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold To Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_SpecialManagementIndicator__c</fullName>
        <label>Special Management Indicator</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On hold</fullName>
                </value>
                <value>
                    <fullName>Instant validation</fullName>
                </value>
                <value>
                    <fullName>Waiting for sync</fullName>
                </value>
                <value>
                    <fullName>Sent for approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected by Manager</fullName>
                </value>
                <value>
                    <fullName>Pending for approval</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Finished</fullName>
                </value>
                <value>
                    <fullName>In process</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Integration Error</fullName>
                </value>
                <value>
                    <fullName>01</fullName>
                    <isActive>false</isActive>
                    <label>01</label>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                    <isActive>false</isActive>
                    <label>Blocked</label>
                </value>
                <value>
                    <fullName>Processed</fullName>
                    <isActive>false</isActive>
                    <label>Processed</label>
                </value>
                <value>
                    <fullName>Sent</fullName>
                    <isActive>false</isActive>
                    <label>Sent</label>
                </value>
                <value>
                    <fullName>Signed</fullName>
                    <isActive>false</isActive>
                    <label>Signed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Street__c</fullName>
        <formula>EUR_CRM_Account__r.EUR_CRM_Street__c</formula>
        <label>Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sum_of_AAV__c</fullName>
        <description>This is the Sum of AAV used in PR CH to determine the approval process.</description>
        <label>Sum of AAV</label>
        <summarizedField>EUR_CRM_Sales_Order_Items__c.EUR_CRM_AAV__c</summarizedField>
        <summaryForeignKey>EUR_CRM_Sales_Order_Items__c.EUR_CRM_Sales_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Summary_Total__c</fullName>
        <label>Summary Total</label>
        <summarizedField>EUR_CRM_Sales_Order_Items__c.EUR_CRM_Item_Total__c</summarizedField>
        <summaryForeignKey>EUR_CRM_Sales_Order_Items__c.EUR_CRM_Sales_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Summary_Total_incl_VAT__c</fullName>
        <formula>IF( EUR_CRM_Country_Code__c = &quot;MA&quot; ,  EUR_CRM_Summary_Total__c * 1.2,  EUR_CRM_Summary_Total__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary Total (incl. VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wholesaler</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>EUR_CRM_Outlet_to_Supplier_Mapping__c.EUR_CRM_Outlet_Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.EUR_CRM_Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>EUR_CRM_Outlet_to_Supplier_Mapping__c.EUR_CRM_Supplier_Account__r.EUR_CRM_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EUR_CRM_Outlet_to_Supplier_Mapping__c</referenceTo>
        <relationshipLabel>Sales Orders (EU)</relationshipLabel>
        <relationshipName>Sales_Orders_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_TeleSales_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TeleSales Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Orders_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Telephone__c</fullName>
        <label>Telephone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_TotalAmount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_TotalDiscount__c</fullName>
        <label>Total Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_TotalQuantity__c</fullName>
        <label>Total Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Total_Sales_Order_Item__c</fullName>
        <label>Total Sales Order Item</label>
        <summaryForeignKey>EUR_CRM_Sales_Order_Items__c.EUR_CRM_Sales_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Total_Value_of_Order__c</fullName>
        <label>Total Value of Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Total_Volume__c</fullName>
        <label>Total Volume</label>
        <summarizedField>EUR_CRM_Sales_Order_Items__c.EUR_CRM_Quantity__c</summarizedField>
        <summaryForeignKey>EUR_CRM_Sales_Order_Items__c.EUR_CRM_Sales_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Totalamountwithtax__c</fullName>
        <label>Total amount with tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_TurnoverSign__c</fullName>
        <label>Turnover Sign</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_UserStatusDescription__c</fullName>
        <label>User Status Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_UserStatus__c</fullName>
        <label>User Status</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_ValidationDate__c</fullName>
        <label>Validation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit</label>
        <referenceTo>EUR_CRM_Visit__c</referenceTo>
        <relationshipLabel>Sales Orders (EU)</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Wholesaler_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wholesaler Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sales Orders (EU) (Wholesaler Contact)</relationshipLabel>
        <relationshipName>Sales_Orders_EU1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Wholesaler_Email__c</fullName>
        <description>It is to populate Wholesaler Email for PR BG.</description>
        <label>Wholesaler Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Wholesaler_Name__c</fullName>
        <formula>EUR_CRM_Supplier__r.EUR_CRM_Supplier_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wholesaler Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Wholesaler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wholesaler</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipName>Sales_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_isBlocked__c</fullName>
        <formula>If(ISBLANK(EUR_CRM_MessageforCustomerService__c)=true, false,true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isBlocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_shipFromID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship from account</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipLabel>Sales Orders (EU) (Ship from account)</relationshipLabel>
        <relationshipName>Sales_Orders_EU2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CopyAddress__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Technical field, if this field is check a workflow will copy the delivery information from the account to the sales order</description>
        <label>Standard Delivery Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_NIM_AdditionalAddressInformation__c</fullName>
        <label>Additional Address Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_NIM_DeliveryNumber__c</fullName>
        <label>Delivery Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_NIM_DeliveryTimeCode__c</fullName>
        <label>Delivery Time Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EP</fullName>
                    <label>Mo-DO 08-16, Fr 08-12, HEB</label>
                </value>
                <value>
                    <fullName>IF</fullName>
                    <label>Mo-Fr 06-13</label>
                </value>
                <value>
                    <fullName>II</fullName>
                    <label>Mo-Fr 07-13</label>
                </value>
                <value>
                    <fullName>IJ</fullName>
                    <label>Mo-Fr 07-14</label>
                </value>
                <value>
                    <fullName>IL</fullName>
                    <label>Mo-Fr 07-18</label>
                </value>
                <value>
                    <fullName>IP</fullName>
                    <label>Mo-Fr 08-12</label>
                </value>
                <value>
                    <fullName>IS</fullName>
                    <label>Mo-Fr 08-16</label>
                </value>
                <value>
                    <fullName>IT</fullName>
                    <label>Mo-Fr 08-18</label>
                </value>
                <value>
                    <fullName>IY</fullName>
                    <label>Mo-Fr 09-16</label>
                </value>
                <value>
                    <fullName>LV</fullName>
                    <label>Mo-Fr 08-16, HEB</label>
                </value>
                <value>
                    <fullName>PA</fullName>
                    <label>Mecareon</label>
                </value>
                <value>
                    <fullName>07</fullName>
                    <label>AS 2h - Kontakt separat, HEB</label>
                </value>
                <value>
                    <fullName>85</fullName>
                    <label>Avis AMAZON via CARP</label>
                </value>
                <value>
                    <fullName>AB</fullName>
                    <isActive>false</isActive>
                    <label>AB</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                    <isActive>false</isActive>
                    <label>AC</label>
                </value>
                <value>
                    <fullName>AD</fullName>
                    <isActive>false</isActive>
                    <label>AD</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_NIM_DepartmentCode__c</fullName>
        <label>Department Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_NIM_ERPOrderURL__c</fullName>
        <label>ERP Order URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EUR_NIM_ERP_OrderType__c</fullName>
        <label>ERP Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SO</fullName>
                </value>
                <value>
                    <fullName>S5</fullName>
                </value>
                <value>
                    <fullName>S6</fullName>
                </value>
                <value>
                    <fullName>S7</fullName>
                </value>
                <value>
                    <fullName>S8</fullName>
                </value>
                <value>
                    <fullName>S9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_NIM_IsServiceCloud__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsServiceCloud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_NIM_OrderHoldCode__c</fullName>
        <label>Order Hold Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Stock Reservation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_NIM_POType__c</fullName>
        <label>PO Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TELI</fullName>
                    <label>Telephone In</label>
                </value>
                <value>
                    <fullName>TELo</fullName>
                    <label>Telephone out</label>
                </value>
                <value>
                    <fullName>Repp</fullName>
                    <label>Rep phone in</label>
                </value>
                <value>
                    <fullName>REPE</fullName>
                    <label>Reps email In</label>
                </value>
                <value>
                    <fullName>EXPS</fullName>
                    <label>External procure system</label>
                </value>
                <value>
                    <fullName>Mail</fullName>
                    <label>Customer Emails In</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_NIM_ProjectCode__c</fullName>
        <label>Project Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_NIM_ReasonCode__c</fullName>
        <label>Reason Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Item_EU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order Item (EU)</label>
        <referenceTo>EUR_CRM_Sales_Order_Items__c</referenceTo>
        <relationshipLabel>Sales Orders (EU)</relationshipLabel>
        <relationshipName>Sales_Orders_EU</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>